[package]
name = "cos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.dev]
# panic = "abort" # disable stack unwinding on panic

# # the profile used for `cargo build --release`
# [profile.release]
# panic = "abort" # disable stack unwinding on panic


[dependencies]
bootloader = "0.10.11"
